--- a/Wox.Plugin.Everything.csproj
+++ b/Wox.Plugin.Everything.csproj
@@ -85,7 +85,9 @@
     <Content Include="Images\warning.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="PortableEverything\Everything.exe" />
+    <None Include="PortableEverything\Everything.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="x64\Everything.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
